# LuauAPI

./: .clang-format  .gitattributes  .gitignore  .luaurc  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  about.md  changelog.md  logo.pdn  mod.json  pyproject.toml
.github/workflows/: ci-safety-net.yml  multi-platform.yml
cmake/: Codegen.cmake  GeodeBindings.cmake  Glm.cmake  Helpers.cmake  ImGui.cmake  ImGuiCocos.cmake  ImGuiHeadless.cmake  Luau.cmake  MoveOnlyFunction.cmake  TestSources.cmake  WebSocketDeps.cmake
docs/: README.md  STYLE.md  mod_guidelines.md
docs/contributor/: architecture.md  building.md  cpp-standard.md  testing.md
docs/contributor/codegen/: cc-array.md  cc-c-array.md  codegen.md  nested-containers.md  pair-containers.md  (+1 more)
docs/cpp/: api-reference.md  integration-guide.md  limits-and-errors.md
docs/dev/: architecture.md  bindings-framework.md  cc-c-array.md  codegen.md  imgui-draw-scheduler.md  module-system.md  nested-containers.md  pair-containers.md  platform-parity.md  runtime.md  task-scheduler.md  testing.md
docs/getting-started/: building.md  chapter-1.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  concepts.md  editor-setup.md  examples.md  first-script.md  installation.md  overview.md
docs/lua/: overview.md
example/: AsyncBootstrap.luau  Bootstrap.luau  HookModifyBootstrap.luau  MainThreadBootstrap.luau  TaskBootstrap.luau  main.cpp  minimalMain.cpp
gd-imgui-cocos/: .gitignore  CMakeLists.txt  README.md
gd-imgui-cocos/include/: imgui-cocos.hpp
gd-imgui-cocos/src/: backend.cpp  hooks.cpp
gd-imgui-cocos/test/: CMakeLists.txt  embed.cmake  main.cpp  mod.json
include/: LuauAPI.hpp  MoveOnlyFunction.hpp  RuntimeTypes.hpp  WindowsSocketBootstrap.hpp
include/imes.luauapi/: LuauAPI.hpp
mod/demo/: demo_modmenu.luau  demo_viewport.luau
mod/luauapi/: luauapi_Bootstrap.luau  luauapi_Executor.luau
resources/: test_donut.glb
scripts/ci/: check_clang_format.ps1  check_python_format.ps1  format.ps1  format_clang_format.ps1  format_python.ps1
src/: api.cpp  main.cpp
src/core/: AllocatorAccounting.hpp  BytecodeCacheAccounting.hpp  Config.hpp  IndexedSlotMap.hpp  Loadstring.cpp  Loadstring.hpp  Runtime.cpp  Runtime.hpp  StackFormat.cpp  StackFormat.hpp
src/diagnostics/: BoundaryRecorder.cpp  BoundaryRecorder.hpp
src/framework/: Binding.cpp  BindingHost.cpp  BindingHost.hpp
src/lua/: AllocatorAccounting.hpp  Binding.cpp  Binding.hpp  BytecodeCacheKey.hpp  Config.hpp  PathRules.hpp  PathSandbox.hpp  RequirePath.hpp  Requirer.cpp  Requirer.hpp  Runtime.cpp  Runtime.hpp
src/render3d/: CCViewportFrame.cpp  CCViewportFrame.hpp  CCViewportFrameNode.cpp  CCViewportFrameNode.hpp  GlUtil.cpp  GlUtil.hpp  GltfIo.cpp  GltfIo.hpp  ImageDecode.cpp  ImageDecode.hpp  Material.hpp  MeshAsset.cpp  MeshAsset.hpp  Renderer3D.cpp  Renderer3D.hpp  TextureAsset.cpp  TextureAsset.hpp  Transform3D.hpp
src/require/: BytecodeCacheKey.cpp  PathRules.hpp  PathSandbox.hpp  RequirePath.hpp  Requirer.cpp  Requirer.hpp  VirtualChunk.cpp  VirtualChunk.hpp
src/scripts/: Bootstrap.luau  Executor.luau  LuauAPI_LoadingLayer.luau  LuauAPI_MenuLayer.luau  _helloworld.luau  _helloworlddemo.luau  _modmenudemo.luau  _seedvaluedemo.luau  _viewportdemo.luau
tests/: allocator_accounting_tests.cpp  api_tests.cpp  binding_tests.cpp  boundary_recorder_tests.cpp  bytecode_cache_accounting_tests.cpp  bytecode_cache_key_tests.cpp  callback_tests.cpp  config_bounds_tests.cpp  current_mod_tests.cpp  deferred_release_tests.cpp  fields_tests.cpp  geode_fs_path_tests.cpp  handle_gc_tests.cpp  host_geode_stubs.cpp  imgui_binding_tests.cpp  imgui_scheduler_tests.cpp  indexed_slot_map_tests.cpp  loadstring_tests.cpp  luau_codegen_hook_tests.py  misc_correctness_tests.cpp  mod_fs_isolation_tests.cpp  mod_sandbox_tests.cpp  opaque_handle_tests.cpp  path_rules_tests.cpp  path_sandbox_tests.cpp  require_path_tests.cpp  requirer_root_tests.cpp  resource_bounds_tests.cpp  runtime_integration_tests.cpp  runtime_tests.cpp  task_scheduler_tests.cpp  usertype_registry_tests.cpp  usertype_tests.cpp  vector_view_tests.cpp  virtual_chunk_tests.cpp  web_binding_tests.cpp  web_shutdown_tests.cpp  websocket_bounds_tests.cpp  websocket_runtime_tests.cpp
tests/fake_geode/: cocos_stubs.cpp  geode_loader_stubs.cpp  geode_stubs.cpp  loader_stubs.cpp
tests/host/: FrustumTests.cpp  Gd3dMeshBindingTests.cpp  Gd3dTransformBindingTests.cpp  GltfParseTests.cpp  ImGuiHostStub.cpp  ImGuiTestHarness.hpp  ImageDecodeTests.cpp  ProceduralMeshTests.cpp  Render3DMathTests.cpp  SceneDrawListTests.cpp  cocos2d.h  lua_test_helpers.hpp  matjson.hpp
tests/luau_codegen/: binding_guard_support.py  conftest.py  test_audit.py  test_binding_guards.py  test_binding_guards_framework.py  test_binding_guards_render3d.py  test_binding_guards_web.py  test_bindings.py  test_bindings_fmod.py  test_bindings_handlers.py  test_bindings_overloads.py  test_bindings_safety.py  test_broma.py  test_broma_delegates.py  test_cc_c_array.py  test_codegen_cli.py  test_constructors.py  test_delegate_generator.py  test_denylist.py  test_extra_bindings_sync.py  test_filtering.py  test_fmod_surface.py  test_free_functions.py  test_geode_ccarray.py  test_geode_ccnode.py  test_geode_enums_emit.py  test_geode_scanner.py  test_gj_grid_fields.py  test_hooks.py  test_keyword_method_names.py  test_luau_types.py  test_manual_fields_sync.py  test_marshalling.py  test_model.py  test_nested_containers.py  test_object_vector_audit.py  test_one_offs.py  test_out_ref_policy.py  test_pair_design.py  test_parity.py  (+8 more)
tools/: format.ps1  format.py
tools/luau_codegen/: __main__.py  android_symbol.py  broma_parser.py  codegen.py  cxx_templates.py  denylist.py  emit_luau_bindings.py  emit_luau_types.py  fields.py  filtering.py  free_fn_overrides.py  geode_sdk_scanner.py  hooks.py  intersection.py  link_attrs.py  marshalling.py  model.py  parity.py  plan.py  type_map.py  util.py
tools/scripts/: audit_field_skips.py  extract_delegates.py  generate_delegate_artifacts.py  generate_delegate_bindings_fixture.py
types/: geode.d.luau
(+512 files in other folders)
