[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "luau-codegen"
version = "1.0.0"
description = "LuauAPI binding/codegen toolchain (Broma -> C++ bindings and Luau type stubs)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
luau-codegen = "luau_codegen.cli.main:cli"

[tool.setuptools]
package-dir = { "" = "tools" }

[tool.setuptools.packages.find]
where = ["tools"]
include = ["luau_codegen*"]

# Tests use the stdlib unittest runner:
#   python -m unittest discover -s tests/luau_codegen -p "test_*.py"
# An editable install (`pip install -e .`) puts `luau_codegen` on the path,
# so the PYTHONPATH=tools shim is only needed when not installed.

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tools"]

[tool.mypy]
python_version = "3.11"
mypy_path = "tools"
ignore_missing_imports = true
